--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.3",
     "json-server": "^0.17.3",
     "morgan": "^1.10.0",
+    "mysql2": "^3.11.3",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "pg": "^8.11.3",
